# okx-opus-trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  docker-compose.test.yml  docker-compose.yml
indicator-trade-server/: Dockerfile  pyproject.toml
indicator-trade-server/src/indicator_trade/: config.py  logging_config.py  main.py  redis_client.py
indicator-trade-server/src/indicator_trade/db/: candle_repository.py  engine.py
indicator-trade-server/src/indicator_trade/indicator/: candle_store.py  indicators.py  regime_detector.py  server.py  snapshot_builder.py  ws_public.py
indicator-trade-server/tests/: conftest.py
indicator-trade-server/tests/integration/: conftest.py  test_okx_live.py
indicator-trade-server/tests/unit/: test_candle_store.py  test_connection_pool.py  test_indicator_server.py  test_indicators.py  test_okx_rest.py  test_order_executor.py  test_order_validator.py  test_position_manager.py  test_regime_detector.py  test_retry.py  test_snapshot_builder.py  test_trade_server.py  test_ws_private.py  test_ws_public.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 001_initial_schema.py  002_add_screener_logs.py  003_add_grafana_reader.py
orchestrator/src/orchestrator/: config.py  haiku_screener.py  logging_config.py  main.py  news_scheduler.py  opus_client.py  perplexity_client.py  playbook_manager.py  prompt_builder.py  redis_client.py  reflection_engine.py  risk_gate.py  snapshot_scheduler.py  state_machine.py
orchestrator/tests/: conftest.py
orchestrator/tests/integration/: conftest.py  test_cross_service.py  test_decision_cycle.py  test_infra.py  test_position_lifecycle.py  test_redis_streams.py  test_repositories.py  test_resilience.py  test_safety_risk.py
orchestrator/tests/unit/: test_connection_pool.py  test_graceful_shutdown.py  test_haiku_screener.py  test_news_scheduler.py  test_opus_client.py  test_perplexity_client.py  test_playbook_manager.py  test_prompt_builder.py  test_reflection_engine.py  test_repository.py  test_retry.py  test_risk_gate.py  test_snapshot_scheduler.py  test_startup.py  test_state_machine.py
ui/: Dockerfile  pyproject.toml
ui/grafana/dashboards/: active_positions.json  opus_activity.json  playbook_evolution.json  portfolio_overview.json  risk_monitor.json  strategy_performance.json  system_health.json
ui/src/ui/: config.py  logging_config.py  main.py  redis_client.py
ui/tests/: conftest.py
ui/tests/integration/: conftest.py  test_grafana_sql.py  test_telegram_redis.py
ui/tests/unit/: test_alerts.py  test_bot.py  test_commands.py  test_connection_pool.py  test_dashboards.py  test_formatters.py  test_queries.py
(+48 files in other folders)
