[project]
name = "ui"
version = "0.1.0"
description = "Telegram bot + Grafana dashboards for trading bot monitoring"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real Redis + PostgreSQL (docker-compose.test.yml)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
